# comp0034-cw-catalinatan

./: .gitignore  README.md  app.py  create_db.py  employment_data.db  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
data/: employment_data.xlsx  employment_prepared.xlsx
src/: app.py  callbacks.py  charts.py  components.py  filter_data_functions.py  layout.py
src/assets/: style.css
tests/: conftest.py  test_app_callbacks.py  test_clear_analysis_callback.py  test_dataset_button.py  test_disparity_map_hover.py  test_live_server.py  test_locate_elements.py  test_region_and_year_dropdowns.py  test_save_filters_callback.py  test_server_live.py  test_summary_stats_card.py  test_update_tooltip_callback.py
