# Basic project information
[project]
name = "comp0034-tutorials"
version = "2025.0.1"
readme = "README.md"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-rA -v"
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.setuptools.packages.find]
where = ["src", "tests"]